Changes for 0.9123      Fri Mar 30 16:46:52 2012
================================================
* Added support for adding blib/script to PATH

Changes for 0.9122      Wed Mar 28 21:52:38 2012
================================================
* Don't spawn a process to check whether perl
  version prereqs are satisfied

Changes for 0.9121      Sat Mar 17 23:23:42 2012
================================================
* Resolved a regression with dev '_' version
  numbers since 0.9109

Changes for 0.9120      Sun Mar  4 12:12:52 2012
================================================
* Resolved a regression with NA test reports

Changes for 0.9119      Thu Feb 23 20:54:53 2012
================================================
* Added progress indicators for indexing when
  'verbose' is set, [rt #75233], contributed by
  reisub

Changes for 0.9118      Mon Feb 13 22:29:33 2012
================================================
* Test reporting enhancements

Changes for 0.9116      Thu Jan  5 22:45:06 2012
================================================
* add NAME headings in modules with POD, Debian
  Lintian fixes, http://bugs.debian.org/65045
* Implement reload command in the shell

Changes for 0.9115      Tue Dec 20 21:10:24 2011
================================================
* Added new config option 'allow_unknown_prereqs'
  to resolve issues with 0.9114 release

Changes for 0.9114      Mon Dec 19 21:15:38 2011
================================================
* Fail earlier on unresolvable prereqs as per
  [rt.cpan.org #73310]

Changes for 0.9113      Fri Dec  9 16:05:07 2011
================================================
* Add more detail and reason for NA to NA reports

Changes for 0.9112      Fri Nov 11 11:10:59 2011
================================================
* The 'perlwrapper' is no longer required.

Changes for 0.9111      Fri Sep 16 10:15:06 2011
================================================
* Enhance CPANPLUS::Dist::MM Makefile/Makefile.PL