@@ -1,3 +1,6 @@
+* Save the history between invocations of the
+  shell.
+
 Changes for 0.9123      Fri Mar 30 16:46:52 2012
 ================================================
 * Added support for adding blib/script to PATH
